--- a/package.json
+++ b/package.json
@@ -2,16 +2,19 @@
   "name": "e-commerce",
   "version": "0.1.0",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
     "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.1.3",
+    "react-redux": "^8.0.4",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
+    "redux-typescript": "^1.2.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
