--- a/package.json
+++ b/package.json
@@ -6,17 +6,21 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@types/react-transition-group": "^4.4.5",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.1.3",
     "react-redux": "^8.0.4",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "redux-typescript": "^1.2.1",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -26,7 +30,8 @@
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
     "lint": "eslint \"./src/**/*.{js,jsx,ts,tsx}\"",
-    "lint:fix": "eslint \"./src/**/*.{js,jsx,ts,tsx}\" --fix"
+    "lint:fix": "eslint \"./src/**/*.{js,jsx,ts,tsx}\" --fix",
+    "lint:write": "eslint --debug src/ --fix"
   },
   "eslintConfig": {
     "extends": [
