--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
     "redux-typescript": "^1.2.1",
+    "serve": "^14.0.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
@@ -34,7 +35,8 @@
     "build-storybook": "build-storybook -s public",
     "lint": "eslint \"./src/**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "eslint \"./src/**/*.{js,jsx,ts,tsx}\" --fix",
-    "lint:write": "eslint --debug src/ --fix"
+    "lint:write": "eslint --debug src/ --fix",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": [
