--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "concurrently \"react-app-rewired start\" \"npx json-server ./src/services/db.json --port 3001\"",
+    "dev": "concurrently \"react-app-rewired start\" \"npx json-server ./src/services/db.json --port 3001\"",
+    "start": "serve -s build",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --watchAll=false",
     "eject": "react-scripts eject",
