--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "scripts": {
     "dev": "concurrently \"react-app-rewired start\" \"npx json-server ./src/services/db.json --port 3001\"",
-    "start": "concurrently \"serve -s build\" \"npx json-server ./src/services/db.json --port 3001\"",
+    "start": "node server.js",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --watchAll=false",
     "eject": "react-scripts eject",
