--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "concurrently": "^7.4.0",
+    "express": "^4.18.2",
     "formik": "^2.2.9",
     "json-server": "^0.17.0",
     "nanoid": "^4.0.0",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.1.3",
